Vordrorn Witch: fix area naming

--- a/mod/area/vordrorn_witch.are.yml
+++ b/mod/area/vordrorn_witch.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 0}
 Name:
   type: cexolocstr
   value:
-    0: Der Vordrornwald
+    0: Vordrornwald
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_forest}
 OnExit: {type: resref, value: _area_leave}
