add hak: ctp_babylon

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -64,6 +64,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_dwarf_hall}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_brick_int}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_elf_interior}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: ctp_babylon}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: lisas_3rd_cloaks}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: lisascaladnei}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 8, Mod_Hak: {type: cexostr, value: lisas_plt_wt}}
