update adbarweg + northern caves, add npcs, tile tweaks, hut

--- a/mod/area/gabelstr_nord_06.are.yml
+++ b/mod/area/gabelstr_nord_06.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 0}
 Name:
   type: cexolocstr
   value:
-    0: Gabelstraße Nord - Durchgang
+    0: Der Adbarweg - Durchgang
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_cave}
 OnExit: {type: resref, value: _area_leave}
@@ -65,7 +65,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 198}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -77,7 +77,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 154}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -89,7 +89,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 0}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -185,7 +185,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 157}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -197,7 +197,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 110}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -209,7 +209,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 22}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -317,7 +317,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 92}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -461,7 +461,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 161}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -557,7 +557,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 87}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -569,7 +569,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 92}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -580,20 +580,20 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 110}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_ID: {type: int, value: 103}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
-    Tile_Orientation: {type: int, value: 0}
+    Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 1}
-    Tile_AnimLoop2: {type: byte, value: 1}
-    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_AnimLoop1: {type: byte, value: 0}
+    Tile_AnimLoop2: {type: byte, value: 0}
+    Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 155}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -689,7 +689,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 20}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -701,19 +701,19 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 154}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 1}
-    Tile_AnimLoop2: {type: byte, value: 1}
-    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_AnimLoop1: {type: byte, value: 0}
+    Tile_AnimLoop2: {type: byte, value: 0}
+    Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 168}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -828,15 +828,15 @@ Tile_List:
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 1}
-    Tile_AnimLoop2: {type: byte, value: 1}
-    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_AnimLoop1: {type: byte, value: 0}
+    Tile_AnimLoop2: {type: byte, value: 0}
+    Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 165}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
-    Tile_SrcLight1: {type: byte, value: 0}
+    Tile_SrcLight1: {type: byte, value: 3}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
@@ -905,7 +905,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 154}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -917,7 +917,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 154}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -929,34 +929,34 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 154}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 1}
-    Tile_AnimLoop2: {type: byte, value: 1}
-    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_AnimLoop1: {type: byte, value: 0}
+    Tile_AnimLoop2: {type: byte, value: 0}
+    Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 50}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 1}
-    Tile_AnimLoop2: {type: byte, value: 1}
-    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_AnimLoop1: {type: byte, value: 0}
+    Tile_AnimLoop2: {type: byte, value: 0}
+    Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 163}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
-    Tile_SrcLight1: {type: byte, value: 0}
+    Tile_SrcLight1: {type: byte, value: 3}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
@@ -1013,7 +1013,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 156}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1025,7 +1025,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 109}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1037,7 +1037,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 110}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1049,7 +1049,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 157}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1068,15 +1068,15 @@ Tile_List:
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 1}
-    Tile_AnimLoop2: {type: byte, value: 1}
-    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_AnimLoop1: {type: byte, value: 0}
+    Tile_AnimLoop2: {type: byte, value: 0}
+    Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 5}
     Tile_MainLight1: {type: byte, value: 0}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
-    Tile_SrcLight1: {type: byte, value: 0}
+    Tile_SrcLight1: {type: byte, value: 3}
     Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
@@ -1133,7 +1133,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 153}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1145,7 +1145,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 198}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1157,7 +1157,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 156}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 0}
@@ -1169,7 +1169,7 @@ Tile_List:
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 153}
-    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight1: {type: byte, value: 7}
     Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 0}
