update module description

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -17,8 +17,7 @@ Mod_DawnHour: {type: byte, value: 6}
 Mod_Description:
   type: cexolocstr
   value:
-    0: www.silbermarken.de fuer generelle Informationen, benoetigte Dateien, und das
-      Spieler-Passwort.
+    0: german-language persistent world with focus on quality roleplay, www.silbermarken.de
 Mod_DuskHour: {type: byte, value: 18}
 Mod_Entry_Area: {type: resref, value: area043}
 Mod_Entry_Dir_X: {type: float, value: 0.0}
