--- a/mod/area/minen02.git.yml
+++ b/mod/area/minen02.git.yml
@@ -9,7 +9,6 @@ AreaProperties:
     AmbientSndDayVol: {type: int, value: 32}
     AmbientSndNight: {type: int, value: 63}
     AmbientSndNitVol: {type: int, value: 32}
-    Comment: {type: cexostr, value: ''}
     EnvAudio: {type: int, value: 0}
     MusicBattle: {type: int, value: 0}
     MusicDay: {type: int, value: 9}
@@ -20,7 +19,68 @@ Creature List:
   value: []
 Door List:
   type: list
-  value: []
+  value:
+  - !nwn-lib.elv.es,2013-07:struct
+    __struct_id: 8
+    AnimationState: {type: byte, value: 0}
+    Appearance: {type: dword, value: 28}
+    AutoRemoveKey: {type: byte, value: 0}
+    Bearing: {type: float, value: -0.0}
+    CloseLockDC: {type: byte, value: 0}
+    Comment: {type: cexostr, value: ''}
+    Conversation: {type: resref, value: ''}
+    CurrentHP: {type: short, value: 80}
+    Description:
+      type: cexolocstr
+      value: {}
+    DisarmDC: {type: byte, value: 15}
+    Faction: {type: dword, value: 1}
+    Fort: {type: byte, value: 16}
+    GenericType_New: {type: dword, value: 0}
+    HP: {type: short, value: 80}
+    Hardness: {type: byte, value: 5}
+    Interruptable: {type: byte, value: 1}
+    KeyName: {type: cexostr, value: key_awmines}
+    KeyRequired: {type: byte, value: 0}
+    LinkedTo: {type: cexostr, value: ''}
+    LinkedToFlags: {type: byte, value: 0}
+    LoadScreenID: {type: word, value: 0}
+    LocName:
+      type: cexolocstr
+      str_ref: 5349
+      value: {}
+    Lockable: {type: byte, value: 1}
+    Locked: {type: byte, value: 1}
+    OnClick: {type: resref, value: door_click}
+    OnClosed: {type: resref, value: door_closed}
+    OnDamaged: {type: resref, value: door_damaged}
+    OnDeath: {type: resref, value: door_death}
+    OnDisarm: {type: resref, value: door_disarm}
+    OnFailToOpen: {type: resref, value: door_failtoopen}
+    OnHeartbeat: {type: resref, value: ''}
+    OnLock: {type: resref, value: door_lock}
+    OnMeleeAttacked: {type: resref, value: door_attacked}
+    OnOpen: {type: resref, value: door_open}
+    OnSpellCastAt: {type: resref, value: door_spellcast}
+    OnTrapTriggered: {type: resref, value: door_traptrig}
+    OnUnlock: {type: resref, value: door_unlock}
+    OnUserDefined: {type: resref, value: ''}
+    OpenLockDC: {type: byte, value: 18}
+    Plot: {type: byte, value: 0}
+    PortraitId: {type: word, value: 0}
+    Ref: {type: byte, value: 0}
+    Tag: {type: cexostr, value: MineDoor}
+    TemplateResRef: {type: resref, value: nw_door_ttr_24}
+    TrapDetectDC: {type: byte, value: 0}
+    TrapDetectable: {type: byte, value: 1}
+    TrapDisarmable: {type: byte, value: 1}
+    TrapFlag: {type: byte, value: 0}
+    TrapOneShot: {type: byte, value: 1}
+    TrapType: {type: byte, value: 0}
+    Will: {type: byte, value: 0}
+    X: {type: float, value: 55.0}
+    Y: {type: float, value: 45.0}
+    Z: {type: float, value: 0.0}
 Encounter List:
   type: list
   value:
@@ -44,29 +104,29 @@ Encounter List:
       value:
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 1
-        X: {type: float, value: -0.09910000115633011}
-        Y: {type: float, value: -0.09910000115633011}
-        Z: {type: float, value: 0.02500000037252903}
+        X: {type: float, value: -0.0715}
+        Y: {type: float, value: -0.8575}
+        Z: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 1
-        X: {type: float, value: 0.0034000000450760126}
-        Y: {type: float, value: -9.802300453186035}
-        Z: {type: float, value: 0.02500000037252903}
+        X: {type: float, value: 2.9297}
+        Y: {type: float, value: -1.1433}
+        Z: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 1
-        X: {type: float, value: 1.6845999956130981}
-        Y: {type: float, value: -9.810400009155273}
-        Z: {type: float, value: 0.02500000037252903}
+        X: {type: float, value: 2.9773}
+        Y: {type: float, value: -0.2858}
+        Z: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 1
-        X: {type: float, value: 1.6845999956130981}
-        Y: {type: float, value: 0.0}
-        Z: {type: float, value: 0.02500000037252903}
+        X: {type: float, value: 0.0238}
+        Y: {type: float, value: -0.0238}
+        Z: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 1
         X: {type: float, value: 0.0}
         Y: {type: float, value: 0.0}
-        Z: {type: float, value: 0.02500000037252903}
+        Z: {type: float, value: 0.025}
     LocalizedName:
       type: cexolocstr
       value:
@@ -89,19 +149,13 @@ Encounter List:
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 2
         Orientation: {type: float, value: -0.0}
-        X: {type: float, value: 20.57349967956543}
-        Y: {type: float, value: 18.822399139404297}
-        Z: {type: float, value: 0.0}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 2
-        Orientation: {type: float, value: -0.0}
-        X: {type: float, value: 30.188600540161133}
-        Y: {type: float, value: 70.0542984008789}
+        X: {type: float, value: 30.1886}
+        Y: {type: float, value: 70.0543}
         Z: {type: float, value: 0.0}
     Tag: {type: cexostr, value: Riesenspinnen}
     TemplateResRef: {type: resref, value: riesenspinnen}
-    XPosition: {type: float, value: 69.40450286865234}
-    YPosition: {type: float, value: 15.057700157165527}
+    XPosition: {type: float, value: 53.4776}
+    YPosition: {type: float, value: 40.3053}
     ZPosition: {type: float, value: 0.0}
 List:
   type: list
@@ -146,9 +200,9 @@ SoundList:
     Times: {type: byte, value: 3}
     Volume: {type: byte, value: 127}
     VolumeVrtn: {type: byte, value: 0}
-    XPosition: {type: float, value: 13.787400245666504}
-    YPosition: {type: float, value: 4.192399978637695}
-    ZPosition: {type: float, value: 1.5499999523162842}
+    XPosition: {type: float, value: 13.7874}
+    YPosition: {type: float, value: 4.1924}
+    ZPosition: {type: float, value: 1.55}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 6
     Active: {type: byte, value: 1}
@@ -183,9 +237,9 @@ SoundList:
     Times: {type: byte, value: 3}
     Volume: {type: byte, value: 127}
     VolumeVrtn: {type: byte, value: 0}
-    XPosition: {type: float, value: 54.92599868774414}
-    YPosition: {type: float, value: 95.93789672851562}
-    ZPosition: {type: float, value: 1.5499999523162842}
+    XPosition: {type: float, value: 54.926}
+    YPosition: {type: float, value: 95.9379}
+    ZPosition: {type: float, value: 1.55}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 6
     Active: {type: byte, value: 1}
@@ -220,9 +274,9 @@ SoundList:
     Times: {type: byte, value: 3}
     Volume: {type: byte, value: 127}
     VolumeVrtn: {type: byte, value: 0}
-    XPosition: {type: float, value: 63.00120162963867}
-    YPosition: {type: float, value: 50.55350112915039}
-    ZPosition: {type: float, value: 4.523600101470947}
+    XPosition: {type: float, value: 63.0012}
+    YPosition: {type: float, value: 50.5535}
+    ZPosition: {type: float, value: 4.5236}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 6
     Active: {type: byte, value: 1}
@@ -257,9 +311,9 @@ SoundList:
     Times: {type: byte, value: 3}
     Volume: {type: byte, value: 127}
     VolumeVrtn: {type: byte, value: 0}
-    XPosition: {type: float, value: 95.95429992675781}
-    YPosition: {type: float, value: 5.386899948120117}
-    ZPosition: {type: float, value: 1.5499999523162842}
+    XPosition: {type: float, value: 95.9543}
+    YPosition: {type: float, value: 5.3869}
+    ZPosition: {type: float, value: 1.55}
 StoreList:
   type: list
   value: []
@@ -279,27 +333,27 @@ TriggerList:
         __struct_id: 3
         PointX: {type: float, value: 0.0}
         PointY: {type: float, value: 0.0}
-        PointZ: {type: float, value: 1.5292999744415283}
+        PointZ: {type: float, value: 1.5293}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: -0.07940000295639038}
-        PointY: {type: float, value: -0.03420000150799751}
-        PointZ: {type: float, value: 1.5289000272750854}
+        PointX: {type: float, value: -0.0794}
+        PointY: {type: float, value: -0.0342}
+        PointZ: {type: float, value: 1.5289}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: -2.6624999046325684}
-        PointY: {type: float, value: -0.2994000017642975}
-        PointZ: {type: float, value: 1.524999976158142}
+        PointX: {type: float, value: -2.6625}
+        PointY: {type: float, value: -0.2994}
+        PointZ: {type: float, value: 1.525}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: -2.7629001140594482}
-        PointY: {type: float, value: -2.793100118637085}
-        PointZ: {type: float, value: 1.524999976158142}
+        PointX: {type: float, value: -2.7629}
+        PointY: {type: float, value: -2.7931}
+        PointZ: {type: float, value: 1.525}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: 0.053199999034404755}
-        PointY: {type: float, value: -2.207200050354004}
-        PointZ: {type: float, value: 1.524999976158142}
+        PointX: {type: float, value: 0.0532}
+        PointY: {type: float, value: -2.2072}
+        PointZ: {type: float, value: 1.525}
     HighlightHeight: {type: float, value: 0.0}
     KeyName: {type: cexostr, value: ''}
     LinkedTo: {type: cexostr, value: WP_MineGabel01_2_MineGabel02}
@@ -328,9 +382,9 @@ TriggerList:
     TrapType: {type: byte, value: 0}
     Type: {type: int, value: 1}
     XOrientation: {type: float, value: 0.0}
-    XPosition: {type: float, value: 86.006103515625}
+    XPosition: {type: float, value: 86.0061}
     YOrientation: {type: float, value: 0.0}
-    YPosition: {type: float, value: 86.23040008544922}
+    YPosition: {type: float, value: 86.2304}
     ZOrientation: {type: float, value: 0.0}
     ZPosition: {type: float, value: 0.0}
   - !nwn-lib.elv.es,2013-07:struct
@@ -346,22 +400,22 @@ TriggerList:
         __struct_id: 3
         PointX: {type: float, value: 0.0}
         PointY: {type: float, value: 0.0}
-        PointZ: {type: float, value: 0.02500000037252903}
+        PointZ: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: 0.2515000104904175}
-        PointY: {type: float, value: -17.75670051574707}
-        PointZ: {type: float, value: 0.02500000037252903}
+        PointX: {type: float, value: 0.2515}
+        PointY: {type: float, value: -17.7567}
+        PointZ: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: 1.760599970817566}
-        PointY: {type: float, value: -17.75670051574707}
-        PointZ: {type: float, value: 0.02500000037252903}
+        PointX: {type: float, value: 1.7606}
+        PointY: {type: float, value: -17.7567}
+        PointZ: {type: float, value: 0.025}
       - !nwn-lib.elv.es,2013-07:struct
         __struct_id: 3
-        PointX: {type: float, value: 1.6086000204086304}
-        PointY: {type: float, value: -0.05920000001788139}
-        PointZ: {type: float, value: 0.30570000410079956}
+        PointX: {type: float, value: 1.6086}
+        PointY: {type: float, value: -0.0592}
+        PointZ: {type: float, value: 0.3057}
     HighlightHeight: {type: float, value: 0.0}
     KeyName: {type: cexostr, value: ''}
     LinkedTo: {type: cexostr, value: WP_MineGabel03_2_MineGabel02}
@@ -390,9 +444,9 @@ TriggerList:
     TrapType: {type: byte, value: 0}
     Type: {type: int, value: 1}
     XOrientation: {type: float, value: 0.0}
-    XPosition: {type: float, value: 0.25130000710487366}
+    XPosition: {type: float, value: 0.2513}
     YOrientation: {type: float, value: 0.0}
-    YPosition: {type: float, value: 73.12039947509766}
+    YPosition: {type: float, value: 73.1204}
     ZOrientation: {type: float, value: 0.0}
     ZPosition: {type: float, value: 0.0}
 WaypointList:
@@ -416,10 +470,10 @@ WaypointList:
     Tag: {type: cexostr, value: WP_MineGabel02_2_MineGabel01}
     TemplateResRef: {type: resref, value: ''}
     XOrientation: {type: float, value: -1.0}
-    XPosition: {type: float, value: 85.26930236816406}
+    XPosition: {type: float, value: 85.2693}
     YOrientation: {type: float, value: 0.0}
-    YPosition: {type: float, value: 84.93160247802734}
-    ZPosition: {type: float, value: 1.4448000192642212}
+    YPosition: {type: float, value: 84.9316}
+    ZPosition: {type: float, value: 1.4448}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 5
     Appearance: {type: byte, value: 1}
@@ -437,8 +491,8 @@ WaypointList:
     MapNoteEnabled: {type: byte, value: 0}
     Tag: {type: cexostr, value: WP_MineGabel02_2_MineGabel03}
     TemplateResRef: {type: resref, value: ''}
-    XOrientation: {type: float, value: 0.9973000288009644}
-    XPosition: {type: float, value: 1.131600022315979}
-    YOrientation: {type: float, value: 0.07360000163316727}
-    YPosition: {type: float, value: 64.24199676513672}
+    XOrientation: {type: float, value: 0.9973}
+    XPosition: {type: float, value: 1.1316}
+    YOrientation: {type: float, value: 0.0736}
+    YPosition: {type: float, value: 64.242}
     ZPosition: {type: float, value: 0.0}
