Gabel Schmiede: updates, clutter

--- a/mod/area/gabel_schmiede.are.yml
+++ b/mod/area/gabel_schmiede.are.yml
@@ -27,7 +27,7 @@ MoonShadows: {type: byte, value: 0}
 Name:
   type: cexolocstr
   value:
-    0: An der Gabel - Schmiede
+    0: An der Gabel - Rüstschmiede Houxler
 NoRest: {type: byte, value: 0}
 OnEnter: {type: resref, value: sr_enter_inside}
 OnExit: {type: resref, value: _area_leave}
@@ -42,7 +42,7 @@ SunDiffuseColor: {type: dword, value: 0}
 SunFogAmount: {type: byte, value: 0}
 SunFogColor: {type: dword, value: 0}
 SunShadows: {type: byte, value: 0}
-Tag: {type: cexostr, value: GabelSchmiede}
+Tag: {type: cexostr, value: gabel_schmiede}
 Tile_List:
   type: list
   value:
@@ -232,9 +232,9 @@ Tile_List:
     Tile_AnimLoop2: {type: byte, value: 1}
     Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 10}
+    Tile_ID: {type: int, value: 123}
     Tile_MainLight1: {type: byte, value: 0}
-    Tile_MainLight2: {type: byte, value: 13}
+    Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 1}
     Tile_SrcLight1: {type: byte, value: 3}
     Tile_SrcLight2: {type: byte, value: 3}
