gabelschmied: rename utm to adjust for changed tag

--- a/mod/utm/st_gabel_bandas.utm.yml
+++ b/mod/utm/st_gabel_bandas.utm.yml
@@ -15,7 +15,7 @@ MarkUp: {type: int, value: 120}
 MaxBuyPrice: {type: int, value: -1}
 OnOpenStore: {type: resref, value: tms_storeopened}
 OnStoreClosed: {type: resref, value: tms_storeclosed}
-ResRef: {type: resref, value: st_gabelschmied}
+ResRef: {type: resref, value: st_gabel_bandas}
 StoreGold: {type: int, value: -1}
 StoreList:
   type: list
@@ -863,7 +863,7 @@ StoreList:
         InventoryRes: {type: resref, value: c_arrowhead}
         Repos_PosX: {type: word, value: 0}
         Repos_Posy: {type: word, value: 0}
-Tag: {type: cexostr, value: ST_gabelschmied}
+Tag: {type: cexostr, value: ST_gabel_bandas}
 WillNotBuy:
   type: list
   value: []
