Cassie's Wagen interior draft 1

--- a/mod/area/wildnorth_wiz.git.yml
+++ b/mod/area/wildnorth_wiz.git.yml
@@ -512,7 +512,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -855,7 +855,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1198,7 +1198,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1541,7 +1541,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1870,7 +1870,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2213,7 +2213,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2556,7 +2556,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2865,7 +2865,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -3268,7 +3268,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -7017,7 +7017,7 @@ Door List:
     Z: {type: float, value: 0.0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 8
-    AnimationState: {type: byte, value: 0}
+    AnimationState: {type: byte, value: 1}
     Appearance: {type: dword, value: 88}
     AutoRemoveKey: {type: byte, value: 0}
     Bearing: {type: float, value: 1.5708}
@@ -7155,7 +7155,7 @@ Door List:
     Hardness: {type: byte, value: 10}
     Interruptable: {type: byte, value: 1}
     KeyName: {type: cexostr, value: ''}
-    KeyRequired: {type: byte, value: 0}
+    KeyRequired: {type: byte, value: 1}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
     LoadScreenID: {type: word, value: 0}
@@ -7164,7 +7164,7 @@ Door List:
       str_ref: 5349
       value: {}
     Lockable: {type: byte, value: 0}
-    Locked: {type: byte, value: 0}
+    Locked: {type: byte, value: 1}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
     OnDamaged: {type: resref, value: door_damaged}
@@ -7180,7 +7180,7 @@ Door List:
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
     Tag: {type: cexostr, value: x2_dooreasy2}
@@ -7216,7 +7216,7 @@ Door List:
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
     KeyName: {type: cexostr, value: ''}
-    KeyRequired: {type: byte, value: 0}
+    KeyRequired: {type: byte, value: 1}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
     LoadScreenID: {type: word, value: 0}
@@ -7226,7 +7226,7 @@ Door List:
       value:
         0: Fancy Door 05l
     Lockable: {type: byte, value: 0}
-    Locked: {type: byte, value: 0}
+    Locked: {type: byte, value: 1}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
     OnDamaged: {type: resref, value: door_damaged}
@@ -7242,7 +7242,7 @@ Door List:
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
     Tag: {type: cexostr, value: CTP_FancyDoor_05l}
@@ -7278,7 +7278,7 @@ Door List:
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
     KeyName: {type: cexostr, value: ''}
-    KeyRequired: {type: byte, value: 0}
+    KeyRequired: {type: byte, value: 1}
     LinkedTo: {type: cexostr, value: ''}
     LinkedToFlags: {type: byte, value: 0}
     LoadScreenID: {type: word, value: 0}
@@ -7288,7 +7288,7 @@ Door List:
       value:
         0: Fancy Door 05l
     Lockable: {type: byte, value: 0}
-    Locked: {type: byte, value: 0}
+    Locked: {type: byte, value: 1}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
     OnDamaged: {type: resref, value: door_damaged}
@@ -7304,7 +7304,7 @@ Door List:
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
     Tag: {type: cexostr, value: CTP_FancyDoor_05l}
@@ -7319,6 +7319,68 @@ Door List:
     X: {type: float, value: 74.7}
     Y: {type: float, value: 73.0}
     Z: {type: float, value: 0.0}
+  - !nwn-lib.elv.es,2013-07:struct
+    __struct_id: 8
+    AnimationState: {type: byte, value: 0}
+    Appearance: {type: dword, value: 0}
+    AutoRemoveKey: {type: byte, value: 0}
+    Bearing: {type: float, value: 0.6981}
+    CloseLockDC: {type: byte, value: 60}
+    Conversation: {type: resref, value: ''}
+    CurrentHP: {type: short, value: 20}
+    Description:
+      type: cexolocstr
+      str_ref: 78867
+      value: {}
+    DisarmDC: {type: byte, value: 20}
+    Faction: {type: dword, value: 1}
+    Fort: {type: byte, value: 28}
+    GenericType_New: {type: dword, value: 210}
+    HP: {type: short, value: 20}
+    Hardness: {type: byte, value: 5}
+    Interruptable: {type: byte, value: 1}
+    KeyName: {type: cexostr, value: key_casswagon}
+    KeyRequired: {type: byte, value: 1}
+    LinkedTo: {type: cexostr, value: casswagon_2_adbarweg}
+    LinkedToFlags: {type: byte, value: 1}
+    LoadScreenID: {type: word, value: 0}
+    LocName:
+      type: cexolocstr
+      str_ref: 14453
+      value:
+        0: Strong Door 02e
+    Lockable: {type: byte, value: 1}
+    Locked: {type: byte, value: 1}
+    OnClick: {type: resref, value: door_click}
+    OnClosed: {type: resref, value: door_closed}
+    OnDamaged: {type: resref, value: door_damaged}
+    OnDeath: {type: resref, value: door_death}
+    OnDisarm: {type: resref, value: door_disarm}
+    OnFailToOpen: {type: resref, value: door_failtoopen}
+    OnHeartbeat: {type: resref, value: ''}
+    OnLock: {type: resref, value: door_lock}
+    OnMeleeAttacked: {type: resref, value: door_attacked}
+    OnOpen: {type: resref, value: door_open}
+    OnSpellCastAt: {type: resref, value: door_spellcast}
+    OnTrapTriggered: {type: resref, value: door_traptrig}
+    OnUnlock: {type: resref, value: door_unlock}
+    OnUserDefined: {type: resref, value: ''}
+    OpenLockDC: {type: byte, value: 60}
+    Plot: {type: byte, value: 0}
+    PortraitId: {type: word, value: 600}
+    Ref: {type: byte, value: 0}
+    Tag: {type: cexostr, value: adbarweg_2_casswagon}
+    TemplateResRef: {type: resref, value: ctp_door_02e}
+    TrapDetectDC: {type: byte, value: 0}
+    TrapDetectable: {type: byte, value: 1}
+    TrapDisarmable: {type: byte, value: 1}
+    TrapFlag: {type: byte, value: 0}
+    TrapOneShot: {type: byte, value: 1}
+    TrapType: {type: byte, value: 1}
+    Will: {type: byte, value: 0}
+    X: {type: float, value: 76.78}
+    Y: {type: float, value: 52.94}
+    Z: {type: float, value: 1.91}
 Encounter List:
   type: list
   value: []
@@ -59847,8 +59909,8 @@ Placeable List:
     Type: {type: byte, value: 0}
     Useable: {type: byte, value: 0}
     Will: {type: byte, value: 0}
-    X: {type: float, value: 47.0419}
-    Y: {type: float, value: 42.0868}
+    X: {type: float, value: 46.3556}
+    Y: {type: float, value: 40.5766}
     Z: {type: float, value: 0.003}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 9
