Cassie's Wagen interior draft 2

--- a/mod/area/cass_wagon.are.yml
+++ b/mod/area/cass_wagon.are.yml
@@ -20,8 +20,8 @@ LoadScreenID: {type: word, value: 0}
 ModListenCheck: {type: int, value: 0}
 ModSpotCheck: {type: int, value: 0}
 MoonAmbientColor: {type: dword, value: 0}
-MoonDiffuseColor: {type: dword, value: 5263440}
-MoonFogAmount: {type: byte, value: 12}
+MoonDiffuseColor: {type: dword, value: 0}
+MoonFogAmount: {type: byte, value: 0}
 MoonFogColor: {type: dword, value: 1973790}
 MoonShadows: {type: byte, value: 0}
 Name:
@@ -37,10 +37,10 @@ PlayerVsPlayer: {type: byte, value: 3}
 ResRef: {type: resref, value: cass_wagon}
 ShadowOpacity: {type: byte, value: 20}
 SkyBox: {type: byte, value: 0}
-SunAmbientColor: {type: dword, value: 6311760}
-SunDiffuseColor: {type: dword, value: 14079702}
-SunFogAmount: {type: byte, value: 12}
-SunFogColor: {type: dword, value: 12303291}
+SunAmbientColor: {type: dword, value: 4076340}
+SunDiffuseColor: {type: dword, value: 11836301}
+SunFogAmount: {type: byte, value: 6}
+SunFogColor: {type: dword, value: 11585221}
 SunShadows: {type: byte, value: 0}
 Tag: {type: cexostr, value: cass_wagon}
 Tile_List:
