Wildnorth Tavern Interior draft 1

--- a/mod/area/wildnorth_wiz.git.yml
+++ b/mod/area/wildnorth_wiz.git.yml
@@ -7217,8 +7217,8 @@ Door List:
     Interruptable: {type: byte, value: 1}
     KeyName: {type: cexostr, value: ''}
     KeyRequired: {type: byte, value: 1}
-    LinkedTo: {type: cexostr, value: ''}
-    LinkedToFlags: {type: byte, value: 0}
+    LinkedTo: {type: cexostr, value: wildnorth_tavern_2_wildnorth}
+    LinkedToFlags: {type: byte, value: 1}
     LoadScreenID: {type: word, value: 0}
     LocName:
       type: cexolocstr
@@ -7226,7 +7226,7 @@ Door List:
       value:
         0: Fancy Door 05l
     Lockable: {type: byte, value: 0}
-    Locked: {type: byte, value: 1}
+    Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
     OnDamaged: {type: resref, value: door_damaged}
@@ -7242,10 +7242,10 @@ Door List:
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 1}
+    Plot: {type: byte, value: 0}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
-    Tag: {type: cexostr, value: CTP_FancyDoor_05l}
+    Tag: {type: cexostr, value: wildnorth_2_wildnorth_tavern}
     TemplateResRef: {type: resref, value: ctp_door_05l}
     TrapDetectDC: {type: byte, value: 0}
     TrapDetectable: {type: byte, value: 1}
@@ -7279,8 +7279,8 @@ Door List:
     Interruptable: {type: byte, value: 1}
     KeyName: {type: cexostr, value: ''}
     KeyRequired: {type: byte, value: 1}
-    LinkedTo: {type: cexostr, value: ''}
-    LinkedToFlags: {type: byte, value: 0}
+    LinkedTo: {type: cexostr, value: wildnorth_tavern2_2_wildnorth}
+    LinkedToFlags: {type: byte, value: 1}
     LoadScreenID: {type: word, value: 0}
     LocName:
       type: cexolocstr
@@ -7288,7 +7288,7 @@ Door List:
       value:
         0: Fancy Door 05l
     Lockable: {type: byte, value: 0}
-    Locked: {type: byte, value: 1}
+    Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
     OnDamaged: {type: resref, value: door_damaged}
@@ -7304,10 +7304,10 @@ Door List:
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 1}
+    Plot: {type: byte, value: 0}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
-    Tag: {type: cexostr, value: CTP_FancyDoor_05l}
+    Tag: {type: cexostr, value: wildnorth_2_wildnorth_tavern2}
     TemplateResRef: {type: resref, value: ctp_door_05l}
     TrapDetectDC: {type: byte, value: 0}
     TrapDetectable: {type: byte, value: 1}
@@ -64768,9 +64768,10 @@ Placeable List:
     Description:
       type: cexolocstr
       str_ref: 68903
-      value: {}
+      value:
+        0: beschuppten
     DisarmDC: {type: byte, value: 15}
-    Faction: {type: dword, value: 4294967295}
+    Faction: {type: dword, value: 1}
     Fort: {type: byte, value: 16}
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
@@ -64781,7 +64782,8 @@ Placeable List:
     LocName:
       type: cexolocstr
       str_ref: 68902
-      value: {}
+      value:
+        0: beschuppten
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -64800,10 +64802,10 @@ Placeable List:
     OnUsed: {type: resref, value: ''}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 792}
     Ref: {type: byte, value: 0}
-    Static: {type: byte, value: 1}
+    Static: {type: byte, value: 0}
     Tag: {type: cexostr, value: x0_RuneStone2}
     TemplateResRef: {type: resref, value: x0_runestone2}
     TrapDetectDC: {type: byte, value: 0}
@@ -64813,7 +64815,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 42.7451}
     Y: {type: float, value: 49.2018}
@@ -64831,7 +64833,8 @@ Placeable List:
     Description:
       type: cexolocstr
       str_ref: 68903
-      value: {}
+      value:
+        0: Zur
     DisarmDC: {type: byte, value: 15}
     Faction: {type: dword, value: 1}
     Fort: {type: byte, value: 16}
@@ -64844,7 +64847,8 @@ Placeable List:
     LocName:
       type: cexolocstr
       str_ref: 68902
-      value: {}
+      value:
+        0: Zur
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -64863,10 +64867,10 @@ Placeable List:
     OnUsed: {type: resref, value: ''}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 793}
     Ref: {type: byte, value: 0}
-    Static: {type: byte, value: 1}
+    Static: {type: byte, value: 0}
     Tag: {type: cexostr, value: x0_RuneStone3}
     TemplateResRef: {type: resref, value: x0_runestone3}
     TrapDetectDC: {type: byte, value: 0}
@@ -64876,7 +64880,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 41.5273}
     Y: {type: float, value: 49.841}
@@ -64894,9 +64898,10 @@ Placeable List:
     Description:
       type: cexolocstr
       str_ref: 68903
-      value: {}
+      value:
+        0: Elfe
     DisarmDC: {type: byte, value: 15}
-    Faction: {type: dword, value: 4294967295}
+    Faction: {type: dword, value: 1}
     Fort: {type: byte, value: 16}
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
@@ -64907,7 +64912,8 @@ Placeable List:
     LocName:
       type: cexolocstr
       str_ref: 68902
-      value: {}
+      value:
+        0: Elfe
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -66900,7 +66906,7 @@ Placeable List:
     LocName:
       type: cexolocstr
       value:
-        0: Sign_1
+        0: Zur beschuppten Elfe
     Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -66919,7 +66925,7 @@ Placeable List:
     OnUsed: {type: resref, value: ''}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 0}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
     Static: {type: byte, value: 0}
@@ -66932,7 +66938,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 70.6}
     Y: {type: float, value: 61.749}
@@ -66962,7 +66968,7 @@ Placeable List:
     LocName:
       type: cexolocstr
       value:
-        0: Sign_1
+        0: Zur beschuppten Elfe
     Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -66981,7 +66987,7 @@ Placeable List:
     OnUsed: {type: resref, value: ''}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 0}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
     Static: {type: byte, value: 0}
@@ -66994,7 +67000,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 67.8293}
     Y: {type: float, value: 61.7609}
