wildnorth_tavern: add caves/storage, int/ext updates

--- a/mod/area/wildnorth_wiz.git.yml
+++ b/mod/area/wildnorth_wiz.git.yml
@@ -7096,8 +7096,8 @@ Door List:
     Interruptable: {type: byte, value: 1}
     KeyName: {type: cexostr, value: ''}
     KeyRequired: {type: byte, value: 0}
-    LinkedTo: {type: cexostr, value: ''}
-    LinkedToFlags: {type: byte, value: 0}
+    LinkedTo: {type: cexostr, value: WP_wildnorth_tavc_2_wildnorth}
+    LinkedToFlags: {type: byte, value: 2}
     LoadScreenID: {type: word, value: 0}
     LocName:
       type: cexolocstr
@@ -7123,7 +7123,7 @@ Door List:
     Plot: {type: byte, value: 0}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
-    Tag: {type: cexostr, value: CaveExit}
+    Tag: {type: cexostr, value: wildnorth_2_wildnorth_tavc}
     TemplateResRef: {type: resref, value: nw_door_ttr_12}
     TrapDetectDC: {type: byte, value: 0}
     TrapDetectable: {type: byte, value: 1}
@@ -64932,10 +64932,10 @@ Placeable List:
     OnUsed: {type: resref, value: ''}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 791}
     Ref: {type: byte, value: 0}
-    Static: {type: byte, value: 1}
+    Static: {type: byte, value: 0}
     Tag: {type: cexostr, value: x0_RuneStone1}
     TemplateResRef: {type: resref, value: x0_runestone1}
     TrapDetectDC: {type: byte, value: 0}
@@ -64945,7 +64945,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 43.2452}
     Y: {type: float, value: 47.9705}
